# react-native-big-media-loader

./: LICENSE  QUICK_TEST.md  README.md  TESTING.md  babel.config.js  jest.config.js  jest.setup.js  package.json  react-native-big-media-loader.podspec  react-native.config.js  tsconfig.json
__tests__/integration/: media-picker-integration.test.ts
__tests__/unit/: BigMediaLoader.test.ts  utils.test.ts
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/gustaffo/bigmedialoader/: BigMediaHandle.kt  BigMediaLoaderModule.kt  BigMediaLoaderPackage.kt
android/src/main/java/com/yourorg/bigmedialoader/: BigMediaHandle.kt  BigMediaLoaderModule.kt  BigMediaLoaderPackage.kt
example/: App.tsx  usage-examples.ts
ios/: BigMediaLoader.h  BigMediaLoader.mm
lib/: NativeBigMediaLoader.d.ts  NativeBigMediaLoader.d.ts.map  NativeBigMediaLoader.js  NativeBigMediaLoader.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  spec.d.ts  spec.d.ts.map  spec.js  spec.js.map  utils.d.ts  utils.d.ts.map  utils.js  utils.js.map
scripts/: postinstall.js  test-autolinking.js  test-manual.js
src/: NativeBigMediaLoader.ts  index.ts  spec.ts  utils.ts
